tests/NormalTests/paczka1/fuzzy1/64206761.err
Error in line 2: A300 S926 10,6
Error in line 1: epMOMlS A300 73,3
Error in line 21: 8GWY A485 31,8
